--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -14,7 +14,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: terraform
+        working-directory: terraform-aws
 
     steps:
       - name: Checkout
